# quantasaurus-rex

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  guidelines.md  lambda_function.py  plan.md  pyproject.toml
assets/email_templates/: report.html
cdk/: app.ts  cdk.json  package.json
cdk/stacks/: quantasaurus-stack.ts
quantasaurus/: __init__.py
quantasaurus/ai_analysis/: __init__.py  engine.py
quantasaurus/ai_analysis/prompts/: investment_analysis.py
quantasaurus/data_collection/: __init__.py  orchestrator.py
quantasaurus/data_collection/aiera/: __init__.py  client.py
quantasaurus/data_collection/robinhood/: __init__.py  client.py
quantasaurus/data_collection/tavily/: __init__.py  client.py
quantasaurus/email_generation/: __init__.py  generator.py
quantasaurus/templates/: portfolio_analysis.html
quantasaurus/utils/: __init__.py  config.py  exceptions.py  logger.py
scripts/: deploy.py  local_test.py
src/: __init__.py  lambda_handler.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  analysis.py  portfolio.py  report.py
src/services/: __init__.py  aiera_client.py  email_service.py  react_agent.py  robinhood_client.py  tavily_client.py
src/utils/: __init__.py  auth.py  data_processing.py  retry.py
tests/: conftest.py  test_environment.py  test_lambda_handler.py  test_parallel_processing.py
